# vae-sfa

./: .gitignore  README.md  download_dataset.sh  main.py  pyproject.toml  train.py
src/: __init__.py  model.py  networks.py  shape_dataset.py  utils.py
