[project]
name = "vae-sfa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.2",
    "h5py>=3.15.1",
    "jax[cuda12]>=0.8.0",
    "ml-collections>=1.1.0",
    "optax>=0.2.6",
    "pillow>=12.0.0",
    "tqdm>=4.67.1",
]
